# road_data_scraper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  api_main.py  docker-build-and-deploy.sh  pyproject.toml  requirements.txt  requirements_dev.txt  runner.py  setup.cfg  tox.ini
.github/workflows/: build_and_deploy.yml  road_scraper.yml  tests.yml
docs/: fastapi_firebase_authentication_setup.md  fastapi_gcp_deployment_with_github_actions.md  gcp_project_with_terraform.md  google_cloud_vm_setup.md  google_project_and_docker_setup.md
src/road_data_scraper/: __init__.py  config.ini  main.py
src/road_data_scraper/report/: report.py  road_data_report_template.ipynb
src/road_data_scraper/steps/: download.py  file_handler.py  metadata.py
terraform/: gcp_project_setup.tf  terraform.tfvars.example
tests/: test_download.py  test_file_handler.py  test_metadata.py
