[metadata]
name = road_data_scraper
version = 0.0.5
description = Scrapes and Cleans WebTRIS Traffic Flow API
author = Dominic Bean
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages=find:

install_requires =
    requests>=2.25.1
    pandas>=1.3.3
    rich>=10.9.0
    papermill>=2.3.3
    jupyterlab>=3.1.12
    panel>=0.12.3
    plotly>=5.1.0
    google-cloud-storage>=1.43.0

python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.packages.find]
where=src

[options.package_data]
* = *.ipynb

[options.extras_require]
testing =
    flake8>=3.9.2

[flake8]
max-line-length = 160
